--- a/package.json
+++ b/package.json
@@ -24,18 +24,27 @@
     "node": "16.16.0"
   },
   "dependencies": {
+    "@automapper/classes": "^8.7.5",
+    "@automapper/core": "^8.7.5",
+    "@automapper/nestjs": "^8.7.5",
+    "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@nestjs/common": "^9.0.8",
     "@nestjs/core": "^9.0.8",
     "@nestjs/platform-express": "^9.0.8",
     "@nestjs/platform-fastify": "^9.0.8",
+    "@prisma/client": "^4.1.1",
+    "bcrypt": "^5.0.1",
+    "core-js": "^3.24.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6"
+    "rxjs": "^7.5.6",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.8",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
     "@types/node": "^16.0.0",
@@ -47,6 +56,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "28.1.3",
     "prettier": "^2.7.1",
+    "prisma": "^4.1.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
     "ts-jest": "28.0.7",
