--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@nestjs/common": "^9.0.8",
     "@nestjs/core": "^9.0.8",
-    "@nestjs/platform-express": "^9.0.8",
     "@nestjs/platform-fastify": "^9.0.8",
     "@prisma/client": "^4.1.1",
     "bcrypt": "^5.0.1",
     "core-js": "^3.24.1",
+    "dayjs": "^1.11.5",
+    "fastify": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
@@ -45,7 +46,6 @@
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.8",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.12",
