--- a/package.json
+++ b/package.json
@@ -29,13 +29,19 @@
     "@automapper/nestjs": "^8.7.5",
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@nestjs/common": "^9.0.8",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.8",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.8",
     "@prisma/client": "^4.1.1",
     "bcrypt": "^5.0.1",
     "core-js": "^3.24.1",
     "dayjs": "^1.11.5",
     "fastify": "^4.3.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
@@ -48,12 +54,15 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "28.1.6",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "28.1.3",
     "prettier": "^2.7.1",
     "prisma": "^4.1.1",
