--- a/package.json
+++ b/package.json
@@ -28,50 +28,51 @@
     "@automapper/core": "^8.7.5",
     "@automapper/nestjs": "^8.7.5",
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
-    "@nestjs/common": "^9.0.8",
+    "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.8",
+    "@nestjs/core": "^9.0.11",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-fastify": "^9.0.8",
-    "@prisma/client": "^4.1.1",
+    "@nestjs/platform-fastify": "^9.0.11",
+    "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
     "core-js": "^3.24.1",
     "dayjs": "^1.11.5",
-    "fastify": "^4.3.0",
+    "fastify": "^4.5.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
-    "zod": "^3.17.10"
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.8",
+    "@nestjs/testing": "^9.0.11",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "28.1.6",
+    "@types/jest": "28.1.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "eslint": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "28.1.3",
+    "npm-check-updates": "^16.0.5",
     "prettier": "^2.7.1",
-    "prisma": "^4.1.1",
+    "prisma": "^4.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
-    "ts-jest": "28.0.7",
+    "ts-jest": "28.0.8",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "4.0.0",
+    "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   },
   "jest": {
