chore: add helmet to fastify

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@automapper/core": "^8.7.5",
     "@automapper/nestjs": "^8.7.5",
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
+    "@fastify/helmet": "^9.1.0",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
@@ -40,6 +41,7 @@
     "core-js": "^3.24.1",
     "dayjs": "^1.11.5",
     "fastify": "^4.5.2",
+    "helmet": "^5.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
