--- a/package.json
+++ b/package.json
@@ -30,18 +30,22 @@
     "@automapper/nestjs": "^8.7.5",
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@fastify/helmet": "^9.1.0",
+    "@nestjs/bull": "^0.6.1",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/microservices": "^9.0.11",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
     "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
+    "bull": "^4.8.5",
     "core-js": "^3.24.1",
     "dayjs": "^1.11.5",
     "fastify": "^4.5.2",
     "helmet": "^5.1.1",
+    "mqtt": "^4.3.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -56,6 +60,7 @@
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.11",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^3.15.9",
     "@types/jest": "28.1.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
