--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
     "@nestjs/microservices": "^9.0.11",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
+    "@nestjs/platform-socket.io": "^9.0.11",
+    "@nestjs/websockets": "^9.0.11",
     "@prisma/client": "^4.2.1",
+    "@socket.io/redis-adapter": "^7.2.0",
     "bcrypt": "^5.0.1",
     "bull": "^4.8.5",
-    "core-js": "^3.24.1",
+    "core-js": "^3.25.0",
     "dayjs": "^1.11.5",
     "fastify": "^4.5.2",
     "helmet": "^5.1.1",
+    "ioredis": "^5.2.3",
     "mqtt": "^4.3.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -54,6 +58,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
+    "socket.io": "^4.5.1",
     "uuid": "^8.3.2",
     "zod": "^3.18.0"
   },
@@ -63,19 +68,19 @@
     "@nestjs/testing": "^9.0.11",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^3.15.9",
-    "@types/jest": "28.1.7",
+    "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "28.1.3",
+    "jest": "29.0.0",
     "npm-check-updates": "^16.0.5",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
