--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@socket.io/redis-adapter": "^7.2.0",
     "bcrypt": "^5.0.1",
     "bull": "^4.8.5",
+    "cache-manager": "^4.1.0",
+    "cache-manager-ioredis": "^2.1.0",
     "core-js": "^3.25.0",
     "dayjs": "^1.11.5",
     "fastify": "^4.5.2",
@@ -68,6 +70,7 @@
     "@nestjs/testing": "^9.0.11",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^3.15.9",
+    "@types/cache-manager": "^4.0.1",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
@@ -80,7 +83,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "29.0.0",
+    "jest": "28.1.3",
     "npm-check-updates": "^16.0.5",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
@@ -90,7 +93,7 @@
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "~4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
