--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
     "@nestjs/platform-socket.io": "^9.0.11",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/websockets": "^9.0.11",
     "@prisma/client": "^4.2.1",
     "@socket.io/redis-adapter": "^7.2.0",
@@ -50,8 +51,8 @@
     "cache-manager-ioredis": "^2.1.0",
     "core-js": "^3.25.0",
     "dayjs": "^1.11.5",
-    "fastify": "^4.5.2",
-    "helmet": "^5.1.1",
+    "fastify": "^4.5.3",
+    "helmet": "^6.0.0",
     "ioredis": "^5.2.3",
     "mqtt": "^4.3.7",
     "passport": "^0.6.0",
@@ -65,12 +66,13 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^9.1.1",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.11",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^3.15.9",
     "@types/cache-manager": "^4.0.1",
+    "@types/cron": "^2.0.0",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
@@ -79,12 +81,12 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "28.1.3",
-    "npm-check-updates": "^16.0.5",
+    "npm-check-updates": "^16.0.6",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
     "source-map-support": "^0.5.21",
