feat: add session update usign sockets

--- a/package.json
+++ b/package.json
@@ -45,15 +45,18 @@
     "@nestjs/websockets": "^9.0.11",
     "@prisma/client": "^4.2.1",
     "@socket.io/redis-adapter": "^7.2.0",
+    "@types/lodash": "^4.14.184",
     "bcrypt": "^5.0.1",
     "bull": "^4.8.5",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
     "core-js": "^3.25.0",
     "dayjs": "^1.11.5",
+    "duration-fns": "^3.0.1",
     "fastify": "^4.5.3",
     "helmet": "^6.0.0",
     "ioredis": "^5.2.3",
+    "lodash": "^4.17.21",
     "mqtt": "^4.3.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
